# family-cloud

./: .gitignore  Cargo.toml  README.md
.config/: nextest.toml
.sqlx/: query-0a4c6d446e8eec6faea2327aa94fccedfbdeefd7edc46ac17d0eb616dbf4bb6e.json  query-216d35f2e21c4172526707d2b7e3698175fde4c9e68b86508ffdfda2a75b6f07.json  query-260432a0addc82e87abf8ca12174e6e1dae3833c8731e3da69274d5a786784b2.json  query-43977c74f87c98aba94f61e087e9274a762f704b8c9940ccce689656ace4ad35.json  query-45f2d3f9afe050d56d0d1cd780ac43fca643651d862f479efcc1cadeb7faa8b3.json  query-4c0b2cd7c3ceec107eb485ba7b84a954f2db9bfa85c71b6fea018a0729050325.json  query-4f52ccdf4aec66c9962ddc254382507e687194f2c6749cdea031ff5704deedd1.json  query-77b428478b70c7f9c5c2ca6180a5e0217fb5ff7941b0a5cecfc0b1d58824b076.json  query-917f3cc4d1838f5ac8dcc1bc423ff5f7daecda6676a94fde967d194eff95691d.json  query-9468a7d7d85a78b2fa5589f2c2a67d38d1fc1875db805141d34e7b5077df640a.json  query-b5fe39ab3eecb899863ebe009eb172834b6066a11b13baa602efceeaafd75908.json  query-e8cac6487b19e6b7066d9bce3f060afc0702ced4c18438284fdd757d8528dc29.json  query-eafe8b7cc0b03eb6f5fa9df261c2a3f41ac63e9c3374a927c6fb89a3f370079d.json
config/: settings.yaml
db_queries/: copy_files.sql  copy_folders.sql  delete_account.sql  delete_files.sql  delete_folders.sql  move_file.sql  move_folder.sql  stream_folder.sql  validate_file_ancestor.sql  validate_folder_ancestor.sql
docs/: endpoints.md
migrations/: 20260106165349_create_users_table.sql  20260106165355_create_session_table.sql  20260115120928_update_users_table_schema.sql  20260131171023_create_objects_table.sql  20260201161955_create_enums.sql  20260201162031_update_objects_fields_types.sql  20260205082718_create_object_kind_enum_and_new_column.sql  20260208115423_update_objects_fields_add_remove_columns.sql  20260217090657_new_full_schema.sql  20260217162256_adding_jobs_table_and_some_types.sql  20260219175755_add_checksum_to_files_table.sql  20260219180446_drop_jobs_table_adapt_apalis_instead.sql  20260221133643_add_root_folder_id_column_users_table.sql  20260221135506_add_root_folder_null_column_users_table.sql  20260221144510_make_folders_users_defferable.sql  20260223144754_add_delete_copy_counters_to_folders_table.sql  20260228093900_drop_deleting_children_count_folders_field.sql
scenarios/: email-change.md  signup.md
src/: config.rs  database.rs  email.rs  errors.rs  jobs.rs  lib.rs  main.rs  models.rs  redis.rs  rustfs.rs  startup.rs  telemetry.rs  utils.rs
src/api/: auth.rs  mod.rs  objects.rs  shares.rs  storage.rs  users.rs
src/api/auth/: email_change.rs  login.rs  logout.rs  mod.rs  models.rs  pswd_reset.rs  refresh.rs  signup.rs  utils.rs
src/api/auth/tests/: utils_tests.rs
src/api/auth/verify/: mod.rs  pswd-reset-scenario.md  pswd_reset.rs
src/api/objects/: copy.rs  copy_obj.rs  delete.rs  download.rs  metadata.rs  mod.rs  move_obj.rs  shares.rs  stream.rs  upload.rs
src/database/: mod.rs  objects.rs  users.rs
src/errors/: api.rs  crypto_hash.rs  database.rs  email.rs  job.rs  mod.rs  redis.rs  rustfs.rs
src/middleware/: auth.rs  mod.rs  telemetry.rs
src/models/: auth.rs  mod.rs  objects.rs  users.rs
suggested-tests/: change-email-tests.md  integration-tests.md  login-tests.md  logout-tests.md  password-reset-tests.md  refactored-utils.md  refresh-token-tests.md
templates/: pswd_reset_form.html
tests/api/: change_email.rs  containers_setup.rs  copy.rs  delete.rs  download.rs  login.rs  logout.rs  mailhog.rs  main.rs  metadata.rs  move_obj.rs  password_reset.rs  pswd_reset.rs  refresh.rs  share.rs  signup.rs  upload.rs  users.rs  utils.rs
tests/api/auth/: change_email.rs  login.rs  logout.rs  mod.rs  password_reset.rs  refresh.rs  signup.rs
tests/api/objects/: metadata.rs  mod.rs  storage.rs
tests/api/utils/: app_test.rs  containers.rs  db.rs  email.rs  mod.rs  models.rs
tests/database/: db.rs
tests/redis/: redis.rs
tests/rustfs/: main.rs  rustfs.rs
tests/utils/: main.rs
