[package]
name = "family-cloud"
version = "0.1.0"
edition = "2024"
authors = ["Allawiii alighraibeh87@gmail.com"]
description = "A self-hosted cloud media center and streaming serivce scales well from small usage to enterprise"
license = "MIT"
readme = "README.md"
keywords = ["cloud", "media", "self-hosted", "family"]
categories = ["multimedia", "web-programming"]

[dependencies]
aws-config = { version = "1.8.12", features = ["behavior-version-latest", "rustls"] }
aws-sdk-s3 = "1.119.0"
axum = { version = "0.8.8", features = ["http2"] }
dotenv = "0.15.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.49.0", features = ["full"] }
