[package]
name = "family-cloud"
version = "0.1.0"
edition = "2024"
authors = ["Allawiii alighraibeh87@gmail.com"]
description = "A self-hosted cloud media center and streaming serivce scales well from small usage to enterprise"
license = "MIT"
readme = "README.md"
keywords = ["cloud", "media", "self-hosted", "family"]
categories = ["multimedia", "web-programming"]

[dependencies]
#aws-smithy-types = { version = "1", features = ["rt-tokio"] }
argon2 = { version = "0.5.3", features = ["std"] }
askama = "0.15.4"
aws-config = { version = "1.8.13", features = [
    "behavior-version-latest",
    "rustls",
] }
aws-sdk-s3 = "1.122.0"
axum = { version = "0.8.8", features = [
    "http2",
    "macros",
    "multipart",
    "tokio",
] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
base64 = "0.22.1"
chrono = { version = "0.4.43", features = ["serde"] }

deadpool-redis = { version = "0.22", features = [
    "tls-rustls",
    "tokio-rustls-comp",
    "tcp_nodelay",
    "serde",
    "keep-alive",
    "connection-manager",
] }

dotenv = "0.15.0"
fastrand = "2.3.0"
hex = "0.4.3"
hmac = { version = "0.12.1", features = ["std"] }
jsonwebtoken = { version = "10.3.0", default-features = false, features = [
    "rust_crypto",
] }
lettre = { version = "0.11.19", default-features = false, features = [
    "builder",
    "hostname",
    "smtp-transport",
    "tokio1",
    "tokio1-rustls-tls",
    "pool",
    "rustls-platform-verifier",
    "tracing",
] }
rand = "0.9.2"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
# sha3 = "0.10.8"
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "json",
] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
urlencoding = "2.1.3"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
anyhow = "1.0.100"
config = "0.15.19"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
    "registry",
    "env-filter",
    "json",
    "fmt",
] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-appender = "0.2.4"
once_cell = "1.21.3"
url = "2.5.8"
tokio-util = { version = "0.7.18", features = ["io"] }
async_zip = { version = "0.0.18", features = ["deflate", "tokio", "tokio-fs"] }
futures = "0.3.31"
path-security = "0.2.0"

mime_guess = "2.0.5"
# futures-util = "0.3.31"
#http-body-util = { version = "0.1.3", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
aws-smithy-types-convert = { version = "0.60.12", features = [
    "convert-chrono",
] }
path-clean = "1.0.1"

[dev-dependencies]
tower = "0.5.2"
testcontainers = "0.26.3"
reqwest = { version = "0.13.1", features = ["json"] }
axum-test = "18.5.0"

scraper = "0.25.0"
regex = "1.12.2"
zip = "8.0.0"
